installed dependecies and created gitignore

--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/PatCeriale/Repertoire-SQL-Back-End/issues"
   },
-  "homepage": "https://github.com/PatCeriale/Repertoire-SQL-Back-End#readme"
+  "homepage": "https://github.com/PatCeriale/Repertoire-SQL-Back-End#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0"
+  }
 }
