--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/PatCeriale/Repertoire-SQL-Back-End#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
